# qt-password-manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Untitled-1.yaml  deploy.ps1  install.sh  installer_script.iss  move_required_libs_for_windows.PS1  move_required_libs_for_windows.ps1  required_libs_for_windows.txt  update_iss_script.ps1
.github/workflows/: release.yml
assets/: icons.qrc
design/: AboutDialog.ui  CreateDialog.ui  LoginDialog.ui  MainWindow.ui  NameChangerDialog.ui  PasswordChangerDialog.ui  PasswordConfirmationDialog.ui  RandomizedPasswordDialog.ui  dialog.ui
include/: AboutDialog.hpp  Application.hpp  Auth.hpp  ClickableLineEdit.hpp  Config.hpp.cmake  ConfigManager.hpp  CreateDialog.hpp  CreateEncryptedFile.hpp  CreateEncryptedFileException.hpp  DataDir.hpp  DataDirHandlerDialog.hpp  DataDirs.hpp  Defines.hpp  Dir.hpp  EncFileListLoader.hpp  EncFileListLoaderException.hpp  EncryptedFile.hpp  EncryptedFiles.hpp  Export.hpp  ExportDialog.hpp  Import.hpp  ImportDialog.hpp  LoginDialog.hpp  MainWindow.hpp  MainWindowConnections.hpp  Migration.hpp  MigrationException.hpp  MultiSelectionBox.hpp  MultiSelectionMenu.hpp  NameChangerDialog.hpp  OrganizationNameMigration.hpp  PasswordChangerDialog.hpp  PasswordConfirmationDialog.hpp  PasswordLengthSlider.hpp  Platform.hpp  Platforms.hpp  RandomizedPasswordDialog.hpp
lib/: CMakeLists.txt
lib/Cipher/: CMakeLists.txt  main.cpp
lib/Cipher/include/: Cipher.hpp  RandomizedPassword.hpp  RandomizedPasswordException.hpp  cipher.hpp
lib/Cipher/src/: Cipher.cpp  RandomizedPassword.cpp  cipher.cpp
lib/JSONHandler/: CMakeLists.txt  main.cpp
lib/JSONHandler/include/: JSONHandler.hpp  JSONHandlerException.hpp
lib/JSONHandler/src/: JSONHandler.cpp
lib/singleton/: CMakeLists.txt
lib/singleton/include/: singleton.hpp
lib/singleton/src/: singleton.cpp
res/: CMakeLists.txt  XPwm.desktop  icon.rc  res.qrc  style.qss  xpwm.desktop
src/: AboutDialog.cpp  Application.cpp  Auth.cpp  CreateDialog.cpp  CreateEncryptedFile.cpp  DataDirs.cpp  EncFileListLoader.cpp  Export.cpp  ExportDialog.cpp  Import.cpp  ImportDialog.cpp  LoginDialog.cpp  MainWindow.cpp  MainWindowConnections.cpp  Migration.cpp  MultiSelectionBox.cpp  MultiSelectionMenu.cpp  NameChangerDialog.cpp  OrganizationNameMigration.cpp  PasswordChangerDialog.cpp  PasswordConfirmationDialog.cpp  PasswordLengthSlider.cpp  Platform.cpp  RandomizedPasswordDialog.cpp  main.cpp
translations/: translation_de.qm  translation_de.ts  translation_tr.qm  translation_tr.ts  translations.qrc
