if(WIN32)
    install(FILES XPwm.png DESTINATION . COMPONENT desktop)
    install(FILES XPwm.ico DESTINATION . COMPONENT desktop)
else()
    execute_process(COMMAND ${CMAKE_COMMAND} -E remove "$ENV{DESTDIR}/share/applications/xpwm.desktop")
    execute_process(COMMAND ${CMAKE_COMMAND} -E remove "$ENV{DESTDIR}/share/icons/hicolor/256x256/apps/xpwm.png")
    install(FILES XPwm.desktop DESTINATION share/applications/ COMPONENT desktop)
    install(FILES XPwm.png DESTINATION share/icons/hicolor/256x256/apps COMPONENT desktop)
endif()